--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,13 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.0
+  get: ^4.6.6
+  url_launcher: ^6.2.5
+  intl: ^0.19.0
+  connectivity_plus: ^5.0.2
+  firebase_storage: ^11.6.9
+  get_storage: ^2.1.1
+  logger: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -35,17 +42,28 @@ flutter:
     - assets/logos/
 
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Bold.ttf
+          weight: 800
+        - asset: assets/fonts/Poppins-BoldItalic.ttf
+          weight: 800
+        - asset: assets/fonts/Poppins-Italic.ttf
+          style: italic
+        - asset: assets/fonts/Poppins-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Poppins-LightItalic.ttf
+          style: italic
+        - asset: assets/fonts/Poppins-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-MediumItalic.ttf
+          weight: 500
+          style: italic
+        - asset: assets/fonts/Poppins-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Poppins-SemiBold.ttf
+          weight: 500
+        - asset: assets/fonts/Poppins-SemiBoldItalic.ttf
+          weight: 500
+          style: italic
