--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,17 +13,41 @@ dependencies:
   flutter:
     sdk: flutter
 # utility packages
-  cupertino_icons: ^1.0.6
   google_fonts: ^6.2.0
-  get: ^4.6.6
   url_launcher: ^6.2.5
   intl: ^0.19.0
   connectivity_plus: ^5.0.2
-  firebase_storage: ^11.6.9
-  get_storage: ^2.1.1
-  logger: ^2.1.0
+  logger: ^2.2.0
   flutter_native_splash: ^2.4.0
+  smooth_page_indicator: ^1.1.0
+  http: ^1.1.0
+  lottie: ^3.1.0
+  shimmer: ^3.0.0
 
+# icons
+  iconsax: ^0.0.8
+  cupertino_icons: ^1.0.6
+
+# stat managment 
+  get: ^4.6.6
+  get_storage: ^2.1.1
+
+# product specific
+  readmore: ^2.2.0
+  carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
+  capped_progress_indicator: ^0.0.2
+
+#firebase
+  google_sign_in: ^6.2.1
+  email_validator: ^2.1.17
+  image_picker: ^1.0.7
+  cached_network_image: ^3.3.1
+  firebase_storage: ^11.6.9
+  firebase_auth: ^4.17.8
+  firebase_core: ^2.27.0
+  cloud_firestore: ^4.15.8
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
